--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules directory
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build directory (React app builds here)
+build/
 
-# testing
-/coverage
+# Environment variable files
+.env
 
-# production
-/build
+# Logs
+*.log
 
-# misc
+# Mac OS system files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# npm debug log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# yarn lock file (if you're using yarn instead of npm)
+yarn.lock
+
+# VSCode settings folder
+.vscode/
